crates/swc_ecma_parser/tests/pat/errors/rest-trailing-comma/issue-3676.js
for ([...rest,] of a) {}
for ({...rest,} of b) {}
